# pi-power-relay

./: .gitignore  INSTALL  MANIFEST  MANIFEST.in  Makefile  README.install  README.install-python2  README.md  README.txt  RELEASE_NOTES  pyproject.toml  setup.py
doc/man/man1/: pi-power-relay.1
scripts/: pi-power-relay
src/pi_power_relay_moxad/: __init__.py  functions.py  pi_power_relay.py
